config files bounded

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ KINDE_CLIENT_SECRET=aP9QNZErpV1DPPRrlTQKOuo7Cp7Usz1CIHOy7e1KdOUAjwOQ0QL3
 KINDE_ISSUER_URL=https://myportfolio01.kinde.com
 KINDE_SITE_URL=http://localhost:3000
 KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
-KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000
+KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/api/auth/creation
 
 AdiTyAsinghPort
 DATABASE_URL="postgres://postgres.lcbfgafdafdyegudowtf:AdiTyAsinghPort@aws-0-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
