--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-
-KINDE_CLIENT_ID=<your_kinde_client_id>
-KINDE_CLIENT_SECRET=<your_kinde_client_secret>
-KINDE_ISSUER_URL=https://<your_kinde_subdomain>.kinde.com
+KINDE_CLIENT_ID=6b19a5df36a94f15ba25e48ea2135ae4
+KINDE_CLIENT_SECRET=uxsoWRLCSrVU5kSSBLbegBA5QTsPiqyyGGAPaZR7s5zMe6RoDi
+KINDE_ISSUER_URL=https://kindeauthporfolio.kinde.com
 KINDE_SITE_URL=http://localhost:3000
 KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
 KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/dashboard
