--- a/.env
+++ b/.env
@@ -6,3 +6,13 @@ KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
 KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/dashboard
 
 @Dity02@22adi
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL=postgres://postgres.hrdmaaccsjkevmvkikyy:@Dity022adi@aws-0-us-west-1.pooler.supabase.com:6543/postgres
+DIRECT_URL=postgres://postgres.hrdmaaccsjkevmvkikyy:@Dity022adi@aws-0-us-west-1.pooler.supabase.com:5432/postgres
