--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ KINDE_CLIENT_SECRET=uxsoWRLCSrVU5kSSBLbegBA5QTsPiqyyGGAPaZR7s5zMe6RoDi
 KINDE_ISSUER_URL=https://kindeauthporfolio.kinde.com
 KINDE_SITE_URL=http://localhost:3000
 KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
-KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/dashboard
+KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/api/auth/creation
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
