--- a/.env
+++ b/.env
@@ -15,3 +15,5 @@ ADityaSinghC
 DATABASE_URL="postgres://postgres.ucihkramimmmcoooufom:ADityaSinghC@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
 
 DIRECT_URL="postgres://postgres.ucihkramimmmcoooufom:ADityaSinghC@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
+
+NEXT_PUBLIC_SANITY_ID=b0ysl7ax
