--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 KINDE_CLIENT_ID=6b19a5df36a94f15ba25e48ea2135ae4
 KINDE_CLIENT_SECRET=uxsoWRLCSrVU5kSSBLbegBA5QTsPiqyyGGAPaZR7s5zMe6RoDi
 KINDE_ISSUER_URL=https://kindeauthporfolio.kinde.com
-KINDE_SITE_URL=http://localhost:3000
-KINDE_POST_LOGOUT_REDIRECT_URL=http://localhost:3000
-KINDE_POST_LOGIN_REDIRECT_URL=http://localhost:3000/api/auth/creation
+KINDE_SITE_URL=https://portfolio-igirish.vercel.app/
+KINDE_POST_LOGOUT_REDIRECT_URL=https://portfolio-igirish.vercel.app/
+KINDE_POST_LOGIN_REDIRECT_URL=https://portfolio-igirish.vercel.app/api/auth/creation
 
 DATABASE_URL="postgres://postgres.ucihkramimmmcoooufom:ADityaSinghC@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
 
